Create new ProductRequest.php,Category.php,Product.php files. Update ProductController.php,catalogue.css,index.blade.php,and routes/web.php files

--- a/resources/css/catalogue.css
+++ b/resources/css/catalogue.css
@@ -160,6 +160,7 @@ nav .navigation .logout-container button:active {
   background-color: #383434;
   color: #f4f4f4;
   border-radius: 4px;
+  border: none;
   font-size: 1.2rem;
   transition: 0.3s;
 }
