Create new info.blade.php. Update ProductController.php and routes/web.php. Rename product-info.css to product-show.css

--- a/resources/css/product-show.css
+++ b/resources/css/product-show.css
@@ -157,6 +157,7 @@ nav .navigation .logout-container button:active {
 }
 .info .product-desc {
   width: 780px;
+  margin-left: 20px;
 }
 .info .product-desc h2 {
   font-size: 2.5rem;
